# AdventOfCode

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  REUSE.toml  devenv.nix  flake.nix
2024/01/: Cargo.toml  README.md
2024/01/src/: main.rs
2024/02/: Cargo.toml  README.md
2024/02/src/: main.rs
2024/03/: Cargo.toml  README.md
2024/03/src/: main.rs
2024/04/: Cargo.toml  README.md
2024/04/src/: main.rs
2024/05/: Cargo.toml  README.md
2024/05/src/: main.rs
2025/01/: main.janet  project.janet  solution.janet
2025/01/test/: test.janet
2025/02/: main.janet  project.janet
2025/02/test/: test.janet
